--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Eversend",
+  "name": "Eversend: meeting all your money needs",
   "icons": [
     {
       "src": "favicon.ico",
